<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision_perceiver</name>
  <version>0.0.0</version>
  <description>The model leverages an asymmetric attention mechanism to iteratively distill
   inputs into a tight latent bottleneck, allowing it to scale to handle very large inputs. We add an image classification haed on top.</description>
  <maintainer email="lidar@todo.todo">lidar</maintainer>
  <license>apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
